add the phone module
- include add contact and delete contact endpoits
- include unit tests for added endpoints
- include documentation for endpoints
