# src/modules/contacts/contacts.controller.js
@@ -1,4 +1,4 @@
-import Contact from './contacts.model';
+import Contact, { isValidId } from './contacts.model';
 
 export default class ContactsController {
 
@@ -21,18 +21,35 @@ export default class ContactsController {
     try {
       const contact = await Contact.create({ name, phone });
       // success
-      return res.json({
+      return res.status(201).json({
         status: "success",
         message: "Contact created successfully",
         data: { contact },
       });
     } catch (error) {
-      // server error
+      /* istanbul ignore next */
       console.error(error);
       return res.status(500).json({
         status: 'fail',
         message: 'Could not create contact try again later!'
       });
     }
+  }
+
+  static async deleteContact (req, res, next) {
+    const { id: _id } = req.params;
+    if (!(await isValidId(_id))) {
+      return res.status(400).json({
+        status: 'fail',
+        message: 'Invalid conctact object id',
+      });
+    }
+    const contact = await Contact.remove({ _id });
+
+    return res.status(200).json({
+      status: 'success',
+      message: 'Contact deleted successfully',
+      data: { contact },
+    })
   }
 }
