# src/modules/contacts/contacts.router.js
@@ -7,4 +7,9 @@ contactsRouter
   .route('/contacts')
   .post(ContactsController.createContact);
 
+contactsRouter
+  .route('/contacts/:id')
+  .delete(ContactsController.deleteContact); // TODO create deleteContact in ContactsController
+
 export default contactsRouter;
+
